Fixed spaces in executed command paths (embed java version resolution, embed java executable permission setting)